fix nav drawer backdrop z-index issue and update css for 3rd level menu items

--- a/css/base.css
+++ b/css/base.css
@@ -11005,8 +11005,8 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   z-index: 28;
   opacity: 0;
   filter: alpha(opacity=0);
-  -webkit-transition: height 0s 0.3s, opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), width 0s 0.3s;
-  transition: height 0s 0.3s, opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), width 0s 0.3s;
+  -webkit-transition: height 0s 0.3s, opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), width 0s 0.3s, z-index 0s 0.3s;
+  transition: height 0s 0.3s, opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), width 0s 0.3s, z-index 0s 0.3s;
 }
 .nav-drawer.open ~ .menu-backdrop, .touch .menu.open ~ .menu-backdrop {
   height: 100%;
@@ -11148,6 +11148,13 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
 .menu-content .nav ul .a {
   font-weight: 400;
   padding-left: 48px;
+}
+.menu-content .nav ul ul a,
+.menu-content .nav ul ul .a {
+  font-size: 90%;
+  font-weight: 300;
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
 @media only screen and (min-width: 480px) {
   .menu-content {
